--- a/build.yaml
+++ b/build.yaml
@@ -14,8 +14,14 @@
 ---
 include:
   - board: nice_nano_v2
+    shield: charybdis_dongle 
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
+
+  - board: nice_nano_v2
     shield: charybdis_left
   - board: nice_nano_v2
     shield: charybdis_right
+    
   - board: nice_nano_v2
     shield: settings_reset
